# archi2likec4

./: .archi2likec4.example.yaml  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTES.md  README.md  RELEASING.md  SECURITY.md  convert.py  diag_dupes.py  diag_orphan_subsystems.py  diag_targets.py  diag_views.py  pyproject.toml  stats.py
.claude/: launch.json  settings.json
.claude/commands/: plan-ralphex.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  test-publish.yml
.ralphex/: config
.ralphex/prompts/: task.txt
archi2likec4/: __init__.py  __main__.py  audit_data.py  builders.py  config.py  exceptions.py  federation.py  generators.py  i18n.py  models.py  parsers.py  pipeline.py  utils.py  web.py  web_routes.py
archi2likec4/builders/: __init__.py  _paths.py  _result.py  data.py  deployment.py  domains.py  integrations.py  systems.py
archi2likec4/generators/: __init__.py  _common.py  audit.py  claude_md.py  deployment.py  domains.py  entities.py  relationships.py  spec.py  systems.py  views.py
archi2likec4/maturity/: __init__.py  detectors.py  gaps.py  reporters.py  scaffold.py  scoring.py
archi2likec4/scripts/: federate_template.py
archi2likec4/templates/: base.html  dashboard.html  detail.html  hierarchy.html  remediations.html
docs/: INGESTION_STANDARDS.md  ROADMAP.md  notification-architecture.md
docs/plans/: april-2026-audit.md  close-35-and-coverage-uplift.md  deployment-model-likec4-native.md  deployment-nesting-review.md  finish-refactor-and-reduce-complexity.md  five-level-app-hierarchy.md  fix-high-open-issues-batch1.md  fix-medium-open-issues.md  merge-and-close-remaining-issues.md  open-source-product-readiness.md  publish-brew-and-pip.md  quality-audit-and-new-issues.md  quality-audit-findings.md  refactor-build-result.md  refactor-maturity-uplift.md  refactor-solution-views.md  review-closed-issues.md
docs/plans/completed/: april-2026-audit.md  close-35-and-coverage-uplift.md  deployment-model-likec4-native.md  deployment-nesting-review.md  finish-refactor-and-reduce-complexity.md  fix-high-open-issues-batch1.md  fix-medium-open-issues.md  merge-and-close-remaining-issues.md  open-source-product-readiness.md  quality-audit-and-new-issues.md  refactor-build-result.md  refactor-solution-views.md  review-closed-issues.md
reference-model/: CLAUDE.md  CUSTOM-VIEWS.md  README.md  STANDARDS.md  _specification.c4  package.json  specification.c4
reference-model/deployment/: prod-dc1-data.c4  prod-dc1-db.c4  prod-dc1-dmz.c4  prod-dc1-k8s.c4  prod-dc1-mgmt.c4  prod-dc2-dr.c4  prod.c4  production.c4  staging.c4
reference-model/domains/: channels.c4  products.c4
reference-model/infrastructure/: dc1_moscow.c4  dc2_spb.c4  dc_dr.c4  dc_main.c4  environments.c4  staging_moscow.c4
reference-model/model/: analytics.c4  channels.c4  data-objects.c4  data-relationships.c4  data.c4  integrations.c4  landscape.c4  notifications.c4  payments-containers.c4  payments.c4  platform-containers.c4  platform.c4  products-containers.c4  products.c4  risk.c4
reference-model/model/domains/: analytics.c4  channels.c4  notifications.c4  payments.c4  platform.c4  products.c4  risk.c4
reference-model/systems/aml/: deployment.c4  model.c4
reference-model/systems/anti_fraud/: deployment.c4  model.c4
reference-model/systems/api_gateway/: deployment.c4  model.c4
reference-model/systems/card_processing/: deployment.c4  model.c4
reference-model/systems/core_banking/: deployment.c4  model.c4
reference-model/systems/dwh/: deployment.c4  model.c4
reference-model/systems/iam/: deployment.c4  model.c4
reference-model/systems/internet_bank/: deployment.c4  model.c4
reference-model/systems/mobile_bank/: deployment.c4  model.c4
reference-model/systems/notification_center/: deployment.c4  model.c4
reference-model/systems/notification_hub/: deployment.c4  model.c4
reference-model/systems/payment_hub/: deployment.c4  model.c4
reference-model/systems/product_catalog/: deployment.c4  model.c4
reference-model/systems/reporting_engine/: deployment.c4  model.c4
reference-model/views/: compliance.c4  data.c4  deployment-views.c4  deployment.c4  domains.c4  dynamic.c4  integration.c4  integrations.c4  landscape.c4  scenarios.c4  services.c4  systems.c4
reference-model/views/domains/: channels.c4  products.c4
scripts/: analyze_views.py
tests/: conftest.py  helpers.py  test_api.py  test_audit_data.py  test_builders.py  test_builders_data.py  test_builders_deployment.py  test_builders_domains.py  test_builders_integrations.py  test_builders_paths.py  test_builders_systems.py  test_cli.py  test_config.py  test_federate.py  test_generators.py  test_generators_deployment.py  test_generators_domains.py  test_generators_entities.py  test_generators_spec.py  test_generators_views.py  test_helpers.py  test_i18n.py  test_maturity_detectors.py  test_maturity_reporters.py  test_maturity_scoring.py  test_models.py  test_parsers.py  test_parsers_components.py  test_parsers_deployment.py  test_parsers_relationships.py  test_parsers_views.py  test_pipeline.py  test_pipeline_e2e.py  test_refactoring_fixes.py  test_utils.py  test_web.py
tools/: analyze_views.py  diag_dupes.py  diag_orphan_subsystems.py  diag_targets.py  diag_views.py  stats.py
