[project]
name = "archi2likec4"
version = "1.0.0"
description = "Convert coArchi XML (ArchiMate) to LikeC4 .c4 files"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "archi2likec4 contributors"}]
keywords = ["archimate", "likec4", "coarchi", "architecture", "converter"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Documentation",
    "Natural Language :: Russian",
    "Natural Language :: English",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Lenivvenil/archi2likec4"
Repository = "https://github.com/Lenivvenil/archi2likec4.git"
Changelog = "https://github.com/Lenivvenil/archi2likec4/blob/main/CHANGELOG.md"

[project.optional-dependencies]
federation = ["pyyaml>=6.0"]
web = ["flask>=2.3", "pyyaml>=6.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "flask>=2.3", "pyyaml>=6.0", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
archi2likec4 = "archi2likec4.pipeline:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.setuptools.packages.find]
include = ["archi2likec4*"]
