[project]
name = "archi2likec4"
version = "1.3.0"
description = "Convert coArchi XML (ArchiMate) to LikeC4 .c4 files"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "archi2likec4 contributors"}]
keywords = ["archimate", "likec4", "coarchi", "architecture", "converter"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Documentation",
    "Natural Language :: Russian",
    "Natural Language :: English",
    "Typing :: Typed",
    "Environment :: Console",
    "Topic :: Software Development :: Code Generators",
]
dependencies = ["defusedxml>=0.7,<1.0"]

[project.urls]
Homepage = "https://github.com/Lenivvenil/archi2likec4"
Repository = "https://github.com/Lenivvenil/archi2likec4.git"
Changelog = "https://github.com/Lenivvenil/archi2likec4/blob/main/CHANGELOG.md"

[project.optional-dependencies]
federation = ["pyyaml>=6.0,<7.0"]
web = ["flask>=2.3,<4.0", "pyyaml>=6.0,<7.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "flask>=2.3", "pyyaml>=6.0", "ruff>=0.4", "mypy>=1.10", "pygments>=2.20", "tomli>=2.0; python_version < '3.11'"]

[project.scripts]
archi2likec4 = "archi2likec4.pipeline:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=archi2likec4 --cov-fail-under=85 --cov-report=xml:coverage.xml"

[tool.coverage.run]
source = ["archi2likec4"]
omit = ["archi2likec4/scripts/federate_template.py"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["flask", "flask.*", "yaml", "defusedxml", "defusedxml.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "archi2likec4.web"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "archi2likec4.web_routes"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "archi2likec4.parsers"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "archi2likec4.scripts.federate_template"
disallow_untyped_defs = false

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C90", "PT"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
# C901 justified: Flask route handlers (web.py, web_routes.py), large YAML-to-config mapper (config.py),
# XML stream parsers (parsers.py), pipeline orchestration (pipeline.py),
# CLI template script (federate_template.py), QA incident decision table (audit_data.py).
"archi2likec4/web.py" = ["C901"]
"archi2likec4/web_routes.py" = ["C901"]
"archi2likec4/audit_data.py" = ["C901"]
"archi2likec4/pipeline.py" = ["C901"]
"archi2likec4/parsers.py" = ["C901"]
"archi2likec4/scripts/federate_template.py" = ["C901"]
"archi2likec4/config.py" = ["C901"]

[tool.setuptools.packages.find]
include = ["archi2likec4*"]

[tool.setuptools.package-data]
archi2likec4 = ["templates/*.html"]
